<resources>
    <string name="app_name">Aeon Test</string>

    <string name="auth_title">Добро пожаловать</string>
    <string name="auth_subtitle">Войдите, чтобы продолжить</string>
    <string name="auth_username_hint">Ваш логин</string>
    <string name="auth_password_hint">Пароль</string>
    <string name="auth_login_button">Войти</string>

    <string name="retry_button">Повторить</string>
    
    <string name="payments_title">Платежи</string>
    <string name="payment_amount">Сумма:</string>
    <string name="payment_date">Создан:</string>
    
    <string name="logout_dialog_title">Выход</string>
    <string name="logout_dialog_message">Вы действительно хотите выйти?</string>
    <string name="logout_dialog_confirm">Выйти</string>
    <string name="logout_dialog_cancel">Отмена</string>
    
</resources>