<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:requiresFadingEdge="vertical"
    tools:context=".presentation.ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintBottom_toTopOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            style="@style/TestApp.Text.Heading.H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/auth_title"
            app:layout_constraintBottom_toTopOf="@id/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/TestApp.Text.Body.NormalRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/auth_subtitle"
            app:layout_constraintBottom_toTopOf="@id/username_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/TestApp.Edit.InputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            app:layout_constraintWidth_max="480dp">

            <EditText
                android:id="@+id/username_edit"
                style="@style/TestApp.Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/ic_person_24"
                android:hint="@string/auth_username_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/TestApp.Edit.PasswordInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/error_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_layout"
            app:layout_constraintWidth_max="480dp">

            <EditText
                android:id="@+id/password_edit"
                style="@style/TestApp.Edit.Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/auth_password_hint"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_message"
            style="@style/TestApp.Text.Heading.H6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/text_error"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="@id/password_layout"
            app:layout_constraintStart_toStartOf="@id/password_layout"
            app:layout_constraintTop_toBottomOf="@id/password_layout"
            tools:text="Неверное имя пользователя или пароль"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/auth_login_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_message"
            app:layout_constraintWidth_max="480dp"
            app:layout_goneMarginTop="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>